--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-<meta charset="utf-8">
-<title>Flask Starter</title>
-</head>
-<body>
-<h1>Hi! this is Flask</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Flask Tutorial</title>
+  </head>
+  <body>
+    {% extends "template.html" %}
+    {% block content %}
+    
+    <h1> My First Try Using Flask </h1>
+    <p> Flask is Fun </p>
+    
+    {% endblock %}
+  </body>
 </html>
